--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
 	<section class="main-sec-1" id="sec-1">
 		<div class="main-sec-1_content container">
 			<div class="main-sec-1_text">
-				<h2>10.1. Pythagorean table</h2>
+				<h2>11.1. Pythagorean table</h2>
 				<h4>Print the Pythagorean table (10×10), the table should be created dynamically</h4>
-				<button onclick="getResultOfTask1()" class="btn">Go</button>
-				<h4 id="task-1_result"></h4>
+				<input type="button" class="btn" value="Open" />
+				<table id="pythagorean" class="hidden"></table>
 			</div>
 		</div>
 	</section>
 	<section class="main-sec-2" id="sec-2">
 		<div class="main-sec-2_content container">
 			<div class="main-sec-2_text">
-				<h2>10.2. Color change button</h2>
-				<h4>There is a block with text on the page and a button. When you click on the button, the text changes
+				<h2>11.2. Color change button</h2>
+				<h4 class="text-block">There is a block with text on the page and a button. When you click on the button, the text changes
 					color. When you click again, the previous color returns.</h4>
-				<button onclick="getResultOfTask2()" class="btn">Go</button>
+				<button class="btn task2">Go</button>
 			</div>
 		</div>
 	</section>
 	<section class="main-sec-3" id="sec-3">
 		<div class="main-sec-3_content container">
 			<div class="main-sec-3_text">
-				<h2>10.3. Getting a random image</h2>
+				<h2>11.3. Getting a random image</h2>
 				<h4>Put any images 1.jpg, 2.jpg, 3.jpg, 4.jpg, 5.jpg, 6.jpg, 7.jpg, 8.jpg, 9.jpg into the folder. Print
 					the image obtained at random (Math.random)</h4>
 				<button onclick="getResultOfTask3()" class="btn">Go</button>
