--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 				<h2>11.3. Getting a random image</h2>
 				<h4>Put any images 1.jpg, 2.jpg, 3.jpg, 4.jpg, 5.jpg, 6.jpg, 7.jpg, 8.jpg, 9.jpg into the folder. Print
 					the image obtained at random (Math.random)</h4>
-				<button onclick="getResultOfTask3()" class="btn">Go</button>
-				<h4 id="task-3_result"></h4>
+				<button class="btn random-img-btn">Go</button>
+				<img src="" alt="Random image" id="random-img">
 			</div>
 		</div>
 	</section>
